feat: sensorml + graphic

--- a/.eslintrc
+++ b/.eslintrc
@@ -61,6 +61,7 @@
         "import/order": "off", // Avoid conflict rule between `eslint-plugin-import` and `eslint-plugin-simple-import-sort`
         "@typescript-eslint/no-unused-vars": "off",
         "unused-imports/no-unused-imports": "error",
+        "jsx-a11y/label-has-associated-control": "off",
         "unused-imports/no-unused-vars": [
           "error",
           { "argsIgnorePattern": "^_" }
