--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
     "@spotlightjs/spotlight": "^1.2.7",
     "@t3-oss/env-nextjs": "^0.7.3",
     "checkly": "^4.5.2",
+    "classnames": "^2.5.1",
+    "cx": "^24.0.2",
     "drizzle-orm": "^0.29.3",
+    "formik": "^2.4.5",
+    "lodash": "^4.17.21",
     "next": "^14.1.0",
     "next-intl": "^3.4.4",
     "next-sitemap": "^4.2.3",
@@ -43,6 +47,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "sharp": "^0.33.2",
+    "yup": "^1.3.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
