--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "next": "^14.1.0",
     "next-intl": "^3.4.4",
     "next-sitemap": "^4.2.3",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-table": "^7.8.0",
     "sharp": "^0.33.2",
     "yup": "^1.3.3",
     "zod": "^3.22.4"
