--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "strictNullChecks": true,
     "noUncheckedIndexedAccess": true,
 
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
@@ -34,20 +34,19 @@
     "noEmit": true,
     "isolatedModules": true,
     "incremental": true,
-
     // Path aliases
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@/public/*": ["./public/*"]
+      "@/public/*": ["./public/*"],
     },
 
     // Editor support
     "plugins": [
       {
-        "name": "next"
-      }
-    ]
+        "name": "next",
+      },
+    ],
   },
   "exclude": ["./out/**/*", "./node_modules/**/*"],
   "include": [
@@ -56,6 +55,6 @@
     "**/*.tsx",
     ".storybook/*.ts",
     ".next/types/**/*.ts",
-    "src/libs/Env.mjs"
-  ]
+    "src/libs/Env.mjs",
+  ],
 }
