feat: added new field and added plots

--- a/.eslintrc
+++ b/.eslintrc
@@ -63,6 +63,7 @@
         "unused-imports/no-unused-imports": "error",
         "jsx-a11y/label-has-associated-control": "off",
         "react/no-array-index-key": "off",
+        "@typescript-eslint/naming-convention": "off",
         "unused-imports/no-unused-vars": [
           "error",
           { "argsIgnorePattern": "^_" }
